@@ -53,13 +53,14 @@ overlay chrome://browser/content/browser.xul   chrome://status4evar/content/lega
 overlay chrome://status4evar/content/prefs.xul chrome://status4evar/content/prefsLegacy.xul appversion<=28.*
 
 # Styles
-style   chrome://global/content/customizeToolbar.xul chrome://status4evar/content/overlay.css      appversion<=28.*
-style   chrome://global/content/customizeToolbar.xul chrome://status4evar/skin/overlay.css         appversion<=28.*
-style   chrome://global/content/customizeToolbar.xul chrome://status4evar-os/skin/overlay.css      appversion<=28.*
-style   chrome://global/content/customizeToolbar.xul chrome://status4evar-os/skin/legacy.css       appversion<=28.*
-style   chrome://status4evar/content/prefs.xul       chrome://status4evar/skin/version/prefs26.css appversion>=26.0
-style   chrome://status4evar/content/prefs.xul       chrome://status4evar/skin/version/prefs28.css appversion<=28.*
-style   chrome://status4evar/content/prefs.xul       chrome://status4evar/skin/version/prefs29.css appversion>=29.0
+style   chrome://browser/content/browser.xul         chrome://status4evar/skin/version/overlay32.css appversion>=32.0
+style   chrome://global/content/customizeToolbar.xul chrome://status4evar/content/overlay.css        appversion<=28.*
+style   chrome://global/content/customizeToolbar.xul chrome://status4evar/skin/overlay.css           appversion<=28.*
+style   chrome://global/content/customizeToolbar.xul chrome://status4evar-os/skin/overlay.css        appversion<=28.*
+style   chrome://global/content/customizeToolbar.xul chrome://status4evar-os/skin/legacy.css         appversion<=28.*
+style   chrome://status4evar/content/prefs.xul       chrome://status4evar/skin/version/prefs26.css   appversion>=26.0
+style   chrome://status4evar/content/prefs.xul       chrome://status4evar/skin/version/prefs28.css   appversion<=28.*
+style   chrome://status4evar/content/prefs.xul       chrome://status4evar/skin/version/prefs29.css   appversion>=29.0
 
 # XPCOM
 interfaces components/status4evar.xpt
