@@ -1,4 +1,6 @@
 Version next
+* Fix location bar status interactions with domain highlighting.
+* Fix origin link shift in Firefox 32 location bar.
 
 Version 2014.06.29.16b
 * Fix gripper styling on OS X (Australis)
